<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="267dp"
            app:srcCompat="@drawable/deteksi_dini_diabetes" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_polyuria"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_polyuria"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_polydipsia"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_polydipsia"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_swl"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_swl"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_weakness"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_weakness"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_polyphagia"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_polyphagia"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_genital"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_genital"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_vb"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_vb"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_itching"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_itching"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_irritability"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_irritability"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_dh"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_dh"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_pp"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_pp"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_ms"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_ms"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_rontok"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_rontok"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_obesitas"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isi_obesitas"
            android:textSize="18sp"
            android:paddingBottom="10dp"
            />


    </LinearLayout>

</ScrollView>